- Defaulted some Vanilla behavior changing settings to OFF - Added option to position Custom Hotbar - Added Borders to Spells in Custom Hotbar - Added InstantPotion and ScrollFix to Hotbar settings - Added option to position and scale TeleportBar - Fixed Texture problem with normal Hotbar and Spell Transparency